--- a/style.css
+++ b/style.css
@@ -11,24 +11,25 @@
     text-align: right;
 }
 
-
 .fz-title{
     font-weight: 900;
-    font-size: 48px;
+    font-size: 36px;
     padding: 15px 0;
 }
 
 .fz-text{ 
-    font-size: 24px;
+    font-size: 20px;
     font-weight: 400;
 }
 
 .bg-gray-light{
     background: #535353;
 }
+
 .bg-gray-heavy{
     background: #414141;
 }
+
 .bg-aqua{
     background: #34c5e8;
 }
@@ -56,9 +57,36 @@
     border-radius: 25%;
 }
 
-.progress-bar{}
+
+.progress-bar-style{
+    height: 20px;
+}
 .separator{
     padding: 15px 0;
 }
 
 /* REGLES DE STYLE DISPOSITION */
+ ul>li{
+    padding-bottom: 15px;
+ }
+
+ ul>li::marker{
+  /* width: 2rem;
+  height: 2rem;
+  border-radius: 50%;
+  display: inline-block; */
+  /* line-height: 2rem; */
+  color: #34c5e8;
+  /* text-align: center;
+  margin-right: 0.5rem; */
+ }
+
+/* Regles de style particuliere*/
+
+#profil{
+    padding: 15px 0;
+}
+
+#profil > .img-fluid{
+    border-radius: 50%;
+}
