cover-letter psd added ---ok

--- a/style.css
+++ b/style.css
@@ -31,11 +31,11 @@
 }
 
 .bg-aqua{
-    background: #ff9ff3;
+    background: #34c5e8;
 }
 
 .txt-color-blue{
-    color:#ff9ff3;
+    color:#34c5e8;
 }
 
 /* rose:#ff9ff3  */
@@ -78,7 +78,7 @@
   border-radius: 50%;
   display: inline-block; */
   /* line-height: 2rem; */
-  color: #ff9ff3;
+  color: #34c5e8;
   /* text-align: center;
   margin-right: 0.5rem; */
  }
